# bita_platform_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  ADMIN_CUSTOMIZATION.md  BUGFIXES.md  CHANGELOG.md  INVENTORY_MOVEMENT_GUIDE.md  PERMISSIONS.md  PRICING.md  README.md  SEEDING.md  dev.dump  docker-compose.yml  format.sh  migrate.sh  pyproject.toml  req.py  requirements.txt  todo.md  zappa_settings.json
account/: apps.py
accounts/: admin.py  admin_views.py  api_key_auth.py  api_key_auth_extension.py  apps.py  backends.py  consumers.py  context_processors.py  manager.py  models.py  permissions.py  roles.py  roles_hanlder.py  serializers.py  signals.py  telegram_auth.py  tests.py  urls.py  utils.py  views.py
administration/: admin.py  apps.py  features.txt  models.py  serializers.py  tests.py  urls.py  views.py
business/: admin.py  apps.py  middleware.py  models.py  permissions.py  roles.py  serializers.py  signals.py  telegram_invites.py  test_telegram_invites.py  tests.py  urls.py  views.py
chat/: admin.py  models.py  serializers.py  urls.py  views.py
config/: app.service  celery@.service  celery_beat.service  flower.service  flower_start.sh  gunicorn.conf.py  nginx.conf  nginx.conf.j2  pgbouncer.ini.j2  userlist.txt.j2
core/: asgi.py  idempotency.py  models.py  pagination.py  settings.py  storage.py  urls.py  utils.py
crm/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
crms/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
docker/: Dockerfile.dev  init.sql
docs/: permissions_audit.md
(+301 files in other folders)
